// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`golden: female casual gap suggestions are stable 1`] = `
{
  "asBottoms": [
    {
      "c": "Olive",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Brown",
      "fl": true,
      "n": 6,
    },
    {
      "c": "White",
      "fl": false,
      "n": 7,
    },
    {
      "c": "Cream",
      "fl": false,
      "n": 7,
    },
    {
      "c": "Blue",
      "fl": true,
      "n": 4,
    },
  ],
  "asTops": [
    {
      "c": "Khaki",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Blue",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Rust",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Brown",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Forest Green",
      "fl": true,
      "n": 5,
    },
    {
      "c": "Beige",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Grey",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Purple",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Charcoal",
      "fl": false,
      "n": 5,
    },
    {
      "c": "Black",
      "fl": false,
      "n": 4,
    },
  ],
}
`;

exports[`golden: female casual ranked deck for Bold matches the snapshot 1`] = `
[
  "Mustard|Charcoal@1.5082",
  "Olive|Beige@1.504",
  "Light Blue|Navy@1.39",
  "White|Navy@1.37",
  "White|Black@1.3252",
  "Burgundy|Navy@1.16",
  "Mustard|Navy@1.15",
  "Burgundy|Khaki@1.147",
  "Mustard|Black@1.1452",
  "Burgundy|Beige@1.144",
  "Light Blue|Beige@1.114",
  "Navy|Khaki@1.017",
  "Navy|Beige@1.014",
  "Navy|Navy@0.99",
  "Navy|Grey@0.9782",
  "Cream|Beige@0.974",
  "Cream|Navy@0.97",
  "Olive|Navy@0.96",
  "Olive|Khaki@0.957",
  "Mustard|Khaki@0.957",
  "Light Blue|Charcoal@0.9482",
  "Light Blue|Black@0.9452",
  "White|Charcoal@0.9282",
  "Cream|Charcoal@0.9282",
  "Cream|Black@0.9252",
  "Olive|Grey@0.9182",
  "Olive|Charcoal@0.9182",
  "Burgundy|Grey@0.9182",
  "Mustard|Grey@0.9182",
  "Olive|Black@0.9152",
  "Burgundy|Black@0.9152",
  "Mustard|Beige@0.914",
  "White|Grey@0.8882",
  "Cream|Grey@0.8882",
  "Light Blue|Khaki@0.757",
  "White|Khaki@0.737",
  "Cream|Khaki@0.737",
  "Light Blue|Grey@0.7182",
  "Burgundy|Charcoal@0.7182",
  "White|Beige@0.694",
  "Navy|Charcoal@0.5882",
]
`;

exports[`golden: female casual ranked deck for Classic matches the snapshot 1`] = `
[
  "White|Navy@1.59",
  "White|Black@1.4952",
  "Light Blue|Navy@1.49",
  "Mustard|Charcoal@1.2882",
  "Olive|Beige@1.284",
  "Navy|Navy@1.26",
  "Navy|Beige@1.234",
  "Light Blue|Beige@1.214",
  "Navy|Grey@1.1982",
  "Cream|Beige@1.194",
  "Cream|Navy@1.19",
  "Navy|Khaki@1.187",
  "White|Charcoal@1.1482",
  "White|Grey@1.1082",
  "Cream|Charcoal@1.0982",
  "Cream|Grey@1.0582",
  "Cream|Black@1.0452",
  "Burgundy|Navy@1.04",
  "Light Blue|Charcoal@0.9982",
  "Mustard|Navy@0.98",
  "White|Beige@0.964",
  "White|Khaki@0.957",
  "Light Blue|Black@0.9452",
  "Burgundy|Beige@0.924",
  "Cream|Khaki@0.907",
  "Burgundy|Khaki@0.877",
  "Mustard|Black@0.8752",
  "Navy|Charcoal@0.8582",
  "Olive|Navy@0.84",
  "Light Blue|Grey@0.8182",
  "Light Blue|Khaki@0.807",
  "Olive|Grey@0.7482",
  "Olive|Charcoal@0.7482",
  "Burgundy|Grey@0.7482",
  "Mustard|Grey@0.7482",
  "Mustard|Beige@0.744",
  "Olive|Khaki@0.737",
  "Mustard|Khaki@0.737",
  "Olive|Black@0.6952",
  "Burgundy|Black@0.6952",
  "Burgundy|Charcoal@0.5482",
]
`;

exports[`golden: female casual ranked deck for Minimal matches the snapshot 1`] = `
[
  "White|Navy@1.57",
  "White|Black@1.5252",
  "Light Blue|Navy@1.34",
  "Navy|Navy@1.28",
  "Cream|Beige@1.264",
  "Navy|Khaki@1.217",
  "Navy|Beige@1.214",
  "Mustard|Charcoal@1.1982",
  "Olive|Beige@1.194",
  "Navy|Grey@1.1782",
  "Cream|Navy@1.17",
  "Light Blue|Beige@1.154",
  "White|Charcoal@1.1282",
  "Cream|Charcoal@1.1282",
  "Cream|Black@1.1252",
  "White|Grey@1.0882",
  "Cream|Grey@1.0882",
  "White|Khaki@0.987",
  "Cream|Khaki@0.987",
  "White|Beige@0.984",
  "Burgundy|Navy@0.94",
  "Light Blue|Charcoal@0.8982",
  "Light Blue|Black@0.8952",
  "Navy|Charcoal@0.8782",
  "Mustard|Navy@0.84",
  "Burgundy|Khaki@0.837",
  "Mustard|Black@0.8352",
  "Burgundy|Beige@0.834",
  "Light Blue|Khaki@0.797",
  "Mustard|Khaki@0.737",
  "Light Blue|Grey@0.7182",
  "Olive|Navy@0.7",
  "Olive|Grey@0.6982",
  "Mustard|Grey@0.6982",
  "Olive|Khaki@0.697",
  "Burgundy|Black@0.6952",
  "Olive|Charcoal@0.6582",
  "Burgundy|Grey@0.6582",
  "Olive|Black@0.6552",
  "Mustard|Beige@0.654",
  "Burgundy|Charcoal@0.4982",
]
`;

exports[`golden: female casual ranked deck for Statement matches the snapshot 1`] = `
[
  "Mustard|Charcoal@1.4182",
  "Olive|Beige@1.414",
  "Light Blue|Navy@1.34",
  "White|Navy@1.34",
  "White|Black@1.2952",
  "Burgundy|Navy@1.12",
  "Light Blue|Beige@1.114",
  "Mustard|Navy@1.06",
  "Burgundy|Khaki@1.057",
  "Mustard|Black@1.0552",
  "Burgundy|Beige@1.054",
  "Navy|Navy@1.01",
  "Cream|Beige@0.994",
  "Navy|Khaki@0.987",
  "Navy|Beige@0.984",
  "Navy|Grey@0.9482",
  "Cream|Navy@0.94",
  "Olive|Navy@0.92",
  "Olive|Khaki@0.917",
  "Mustard|Khaki@0.917",
  "White|Charcoal@0.8982",
  "Cream|Charcoal@0.8982",
  "Light Blue|Charcoal@0.8982",
  "Cream|Black@0.8952",
  "Light Blue|Black@0.8952",
  "Olive|Grey@0.8782",
  "Olive|Charcoal@0.8782",
  "Burgundy|Grey@0.8782",
  "Mustard|Grey@0.8782",
  "Olive|Black@0.8752",
  "Burgundy|Black@0.8752",
  "Mustard|Beige@0.874",
  "White|Grey@0.8582",
  "Cream|Grey@0.8582",
  "Light Blue|Khaki@0.757",
  "White|Khaki@0.757",
  "Cream|Khaki@0.757",
  "Light Blue|Grey@0.7182",
  "White|Beige@0.714",
  "Burgundy|Charcoal@0.6782",
  "Navy|Charcoal@0.6082",
]
`;

exports[`golden: female casual universe (ids + scores) matches the snapshot 1`] = `
[
  {
    "curated": true,
    "id": "White|Navy",
    "sc": 1.44,
  },
  {
    "curated": true,
    "id": "White|Black",
    "sc": 1.3952,
  },
  {
    "curated": true,
    "id": "Light Blue|Navy",
    "sc": 1.34,
  },
  {
    "curated": true,
    "id": "Mustard|Charcoal",
    "sc": 1.3182,
  },
  {
    "curated": true,
    "id": "Olive|Beige",
    "sc": 1.314,
  },
  {
    "curated": true,
    "id": "Light Blue|Beige",
    "sc": 1.114,
  },
  {
    "curated": false,
    "id": "Navy|Navy",
    "sc": 1.11,
  },
  {
    "curated": true,
    "id": "Cream|Beige",
    "sc": 1.094,
  },
  {
    "curated": false,
    "id": "Navy|Khaki",
    "sc": 1.087,
  },
  {
    "curated": false,
    "id": "Navy|Beige",
    "sc": 1.084,
  },
  {
    "curated": false,
    "id": "Navy|Grey",
    "sc": 1.0482,
  },
  {
    "curated": false,
    "id": "Cream|Navy",
    "sc": 1.04,
  },
  {
    "curated": true,
    "id": "Burgundy|Navy",
    "sc": 1.02,
  },
  {
    "curated": false,
    "id": "White|Charcoal",
    "sc": 0.9982,
  },
  {
    "curated": false,
    "id": "Cream|Charcoal",
    "sc": 0.9982,
  },
  {
    "curated": false,
    "id": "Cream|Black",
    "sc": 0.9952,
  },
  {
    "curated": false,
    "id": "Mustard|Navy",
    "sc": 0.96,
  },
  {
    "curated": false,
    "id": "White|Grey",
    "sc": 0.9582,
  },
  {
    "curated": false,
    "id": "Cream|Grey",
    "sc": 0.9582,
  },
  {
    "curated": false,
    "id": "Burgundy|Khaki",
    "sc": 0.957,
  },
  {
    "curated": false,
    "id": "Mustard|Black",
    "sc": 0.9552,
  },
  {
    "curated": false,
    "id": "Burgundy|Beige",
    "sc": 0.954,
  },
  {
    "curated": false,
    "id": "Light Blue|Charcoal",
    "sc": 0.8982,
  },
  {
    "curated": false,
    "id": "Light Blue|Black",
    "sc": 0.8952,
  },
  {
    "curated": false,
    "id": "White|Khaki",
    "sc": 0.857,
  },
  {
    "curated": false,
    "id": "Cream|Khaki",
    "sc": 0.857,
  },
  {
    "curated": false,
    "id": "Olive|Navy",
    "sc": 0.82,
  },
  {
    "curated": false,
    "id": "Olive|Khaki",
    "sc": 0.817,
  },
  {
    "curated": false,
    "id": "Mustard|Khaki",
    "sc": 0.817,
  },
  {
    "curated": false,
    "id": "White|Beige",
    "sc": 0.814,
  },
  {
    "curated": false,
    "id": "Olive|Grey",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Olive|Charcoal",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Burgundy|Grey",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Mustard|Grey",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Olive|Black",
    "sc": 0.7752,
  },
  {
    "curated": false,
    "id": "Burgundy|Black",
    "sc": 0.7752,
  },
  {
    "curated": false,
    "id": "Mustard|Beige",
    "sc": 0.774,
  },
  {
    "curated": false,
    "id": "Light Blue|Khaki",
    "sc": 0.757,
  },
  {
    "curated": false,
    "id": "Light Blue|Grey",
    "sc": 0.7182,
  },
  {
    "curated": false,
    "id": "Navy|Charcoal",
    "sc": 0.7082,
  },
  {
    "curated": false,
    "id": "Burgundy|Charcoal",
    "sc": 0.5782,
  },
]
`;

exports[`golden: female formal gap suggestions are stable 1`] = `
{
  "asBottoms": [
    {
      "c": "Olive",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Brown",
      "fl": true,
      "n": 6,
    },
    {
      "c": "White",
      "fl": false,
      "n": 7,
    },
    {
      "c": "Cream",
      "fl": false,
      "n": 7,
    },
    {
      "c": "Blue",
      "fl": true,
      "n": 4,
    },
  ],
  "asTops": [
    {
      "c": "Khaki",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Blue",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Rust",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Brown",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Forest Green",
      "fl": true,
      "n": 5,
    },
    {
      "c": "Beige",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Grey",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Purple",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Charcoal",
      "fl": false,
      "n": 5,
    },
    {
      "c": "Black",
      "fl": false,
      "n": 4,
    },
  ],
}
`;

exports[`golden: female formal ranked deck for Bold matches the snapshot 1`] = `
[
  "Light Blue|Navy@1.39",
  "White|Navy@1.37",
  "White|Charcoal@1.3282",
  "White|Black@1.3252",
  "Burgundy|Navy@1.16",
  "Mustard|Navy@1.15",
  "Burgundy|Khaki@1.147",
  "Mustard|Black@1.1452",
  "Burgundy|Beige@1.144",
  "Mustard|Charcoal@1.1082",
  "Olive|Beige@1.104",
  "Navy|Khaki@1.017",
  "Navy|Beige@1.014",
  "Navy|Navy@0.99",
  "Navy|Grey@0.9782",
  "Cream|Beige@0.974",
  "Cream|Navy@0.97",
  "Olive|Navy@0.96",
  "Olive|Khaki@0.957",
  "Mustard|Khaki@0.957",
  "Light Blue|Charcoal@0.9482",
  "Light Blue|Black@0.9452",
  "Cream|Charcoal@0.9282",
  "Cream|Black@0.9252",
  "Olive|Grey@0.9182",
  "Olive|Charcoal@0.9182",
  "Burgundy|Grey@0.9182",
  "Mustard|Grey@0.9182",
  "Olive|Black@0.9152",
  "Burgundy|Black@0.9152",
  "Mustard|Beige@0.914",
  "White|Grey@0.8882",
  "Cream|Grey@0.8882",
  "Light Blue|Khaki@0.757",
  "White|Khaki@0.737",
  "Cream|Khaki@0.737",
  "Light Blue|Grey@0.7182",
  "Burgundy|Charcoal@0.7182",
  "Light Blue|Beige@0.714",
  "White|Beige@0.694",
  "Navy|Charcoal@0.5882",
]
`;

exports[`golden: female formal ranked deck for Classic matches the snapshot 1`] = `
[
  "White|Navy@1.59",
  "White|Charcoal@1.5482",
  "White|Black@1.4952",
  "Light Blue|Navy@1.49",
  "Navy|Navy@1.26",
  "Navy|Beige@1.234",
  "Navy|Grey@1.1982",
  "Cream|Beige@1.194",
  "Cream|Navy@1.19",
  "Navy|Khaki@1.187",
  "White|Grey@1.1082",
  "Cream|Charcoal@1.0982",
  "Cream|Grey@1.0582",
  "Cream|Black@1.0452",
  "Burgundy|Navy@1.04",
  "Light Blue|Charcoal@0.9982",
  "Mustard|Navy@0.98",
  "White|Beige@0.964",
  "White|Khaki@0.957",
  "Light Blue|Black@0.9452",
  "Burgundy|Beige@0.924",
  "Cream|Khaki@0.907",
  "Mustard|Charcoal@0.8882",
  "Olive|Beige@0.884",
  "Burgundy|Khaki@0.877",
  "Mustard|Black@0.8752",
  "Navy|Charcoal@0.8582",
  "Olive|Navy@0.84",
  "Light Blue|Grey@0.8182",
  "Light Blue|Beige@0.814",
  "Light Blue|Khaki@0.807",
  "Olive|Grey@0.7482",
  "Olive|Charcoal@0.7482",
  "Burgundy|Grey@0.7482",
  "Mustard|Grey@0.7482",
  "Mustard|Beige@0.744",
  "Olive|Khaki@0.737",
  "Mustard|Khaki@0.737",
  "Olive|Black@0.6952",
  "Burgundy|Black@0.6952",
  "Burgundy|Charcoal@0.5482",
]
`;

exports[`golden: female formal ranked deck for Minimal matches the snapshot 1`] = `
[
  "White|Navy@1.57",
  "White|Charcoal@1.5282",
  "White|Black@1.5252",
  "Light Blue|Navy@1.34",
  "Navy|Navy@1.28",
  "Cream|Beige@1.264",
  "Navy|Khaki@1.217",
  "Navy|Beige@1.214",
  "Navy|Grey@1.1782",
  "Cream|Navy@1.17",
  "Cream|Charcoal@1.1282",
  "Cream|Black@1.1252",
  "White|Grey@1.0882",
  "Cream|Grey@1.0882",
  "White|Khaki@0.987",
  "Cream|Khaki@0.987",
  "White|Beige@0.984",
  "Burgundy|Navy@0.94",
  "Light Blue|Charcoal@0.8982",
  "Light Blue|Black@0.8952",
  "Navy|Charcoal@0.8782",
  "Mustard|Navy@0.84",
  "Burgundy|Khaki@0.837",
  "Mustard|Black@0.8352",
  "Burgundy|Beige@0.834",
  "Mustard|Charcoal@0.7982",
  "Light Blue|Khaki@0.797",
  "Olive|Beige@0.794",
  "Light Blue|Beige@0.754",
  "Mustard|Khaki@0.737",
  "Light Blue|Grey@0.7182",
  "Olive|Navy@0.7",
  "Olive|Grey@0.6982",
  "Mustard|Grey@0.6982",
  "Olive|Khaki@0.697",
  "Burgundy|Black@0.6952",
  "Olive|Charcoal@0.6582",
  "Burgundy|Grey@0.6582",
  "Olive|Black@0.6552",
  "Mustard|Beige@0.654",
  "Burgundy|Charcoal@0.4982",
]
`;

exports[`golden: female formal ranked deck for Statement matches the snapshot 1`] = `
[
  "Light Blue|Navy@1.34",
  "White|Navy@1.34",
  "White|Charcoal@1.2982",
  "White|Black@1.2952",
  "Burgundy|Navy@1.12",
  "Mustard|Navy@1.06",
  "Burgundy|Khaki@1.057",
  "Mustard|Black@1.0552",
  "Burgundy|Beige@1.054",
  "Mustard|Charcoal@1.0182",
  "Olive|Beige@1.014",
  "Navy|Navy@1.01",
  "Cream|Beige@0.994",
  "Navy|Khaki@0.987",
  "Navy|Beige@0.984",
  "Navy|Grey@0.9482",
  "Cream|Navy@0.94",
  "Olive|Navy@0.92",
  "Olive|Khaki@0.917",
  "Mustard|Khaki@0.917",
  "Cream|Charcoal@0.8982",
  "Light Blue|Charcoal@0.8982",
  "Cream|Black@0.8952",
  "Light Blue|Black@0.8952",
  "Olive|Grey@0.8782",
  "Olive|Charcoal@0.8782",
  "Burgundy|Grey@0.8782",
  "Mustard|Grey@0.8782",
  "Olive|Black@0.8752",
  "Burgundy|Black@0.8752",
  "Mustard|Beige@0.874",
  "White|Grey@0.8582",
  "Cream|Grey@0.8582",
  "Light Blue|Khaki@0.757",
  "White|Khaki@0.757",
  "Cream|Khaki@0.757",
  "Light Blue|Grey@0.7182",
  "White|Beige@0.714",
  "Light Blue|Beige@0.714",
  "Burgundy|Charcoal@0.6782",
  "Navy|Charcoal@0.6082",
]
`;

exports[`golden: female formal universe (ids + scores) matches the snapshot 1`] = `
[
  {
    "curated": true,
    "id": "White|Navy",
    "sc": 1.44,
  },
  {
    "curated": true,
    "id": "White|Charcoal",
    "sc": 1.3982,
  },
  {
    "curated": true,
    "id": "White|Black",
    "sc": 1.3952,
  },
  {
    "curated": true,
    "id": "Light Blue|Navy",
    "sc": 1.34,
  },
  {
    "curated": false,
    "id": "Navy|Navy",
    "sc": 1.11,
  },
  {
    "curated": true,
    "id": "Cream|Beige",
    "sc": 1.094,
  },
  {
    "curated": false,
    "id": "Navy|Khaki",
    "sc": 1.087,
  },
  {
    "curated": false,
    "id": "Navy|Beige",
    "sc": 1.084,
  },
  {
    "curated": false,
    "id": "Navy|Grey",
    "sc": 1.0482,
  },
  {
    "curated": false,
    "id": "Cream|Navy",
    "sc": 1.04,
  },
  {
    "curated": true,
    "id": "Burgundy|Navy",
    "sc": 1.02,
  },
  {
    "curated": false,
    "id": "Cream|Charcoal",
    "sc": 0.9982,
  },
  {
    "curated": false,
    "id": "Cream|Black",
    "sc": 0.9952,
  },
  {
    "curated": false,
    "id": "Mustard|Navy",
    "sc": 0.96,
  },
  {
    "curated": false,
    "id": "White|Grey",
    "sc": 0.9582,
  },
  {
    "curated": false,
    "id": "Cream|Grey",
    "sc": 0.9582,
  },
  {
    "curated": false,
    "id": "Burgundy|Khaki",
    "sc": 0.957,
  },
  {
    "curated": false,
    "id": "Mustard|Black",
    "sc": 0.9552,
  },
  {
    "curated": false,
    "id": "Burgundy|Beige",
    "sc": 0.954,
  },
  {
    "curated": false,
    "id": "Mustard|Charcoal",
    "sc": 0.9182,
  },
  {
    "curated": false,
    "id": "Olive|Beige",
    "sc": 0.914,
  },
  {
    "curated": false,
    "id": "Light Blue|Charcoal",
    "sc": 0.8982,
  },
  {
    "curated": false,
    "id": "Light Blue|Black",
    "sc": 0.8952,
  },
  {
    "curated": false,
    "id": "White|Khaki",
    "sc": 0.857,
  },
  {
    "curated": false,
    "id": "Cream|Khaki",
    "sc": 0.857,
  },
  {
    "curated": false,
    "id": "Olive|Navy",
    "sc": 0.82,
  },
  {
    "curated": false,
    "id": "Olive|Khaki",
    "sc": 0.817,
  },
  {
    "curated": false,
    "id": "Mustard|Khaki",
    "sc": 0.817,
  },
  {
    "curated": false,
    "id": "White|Beige",
    "sc": 0.814,
  },
  {
    "curated": false,
    "id": "Olive|Grey",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Olive|Charcoal",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Burgundy|Grey",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Mustard|Grey",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Olive|Black",
    "sc": 0.7752,
  },
  {
    "curated": false,
    "id": "Burgundy|Black",
    "sc": 0.7752,
  },
  {
    "curated": false,
    "id": "Mustard|Beige",
    "sc": 0.774,
  },
  {
    "curated": false,
    "id": "Light Blue|Khaki",
    "sc": 0.757,
  },
  {
    "curated": false,
    "id": "Light Blue|Grey",
    "sc": 0.7182,
  },
  {
    "curated": false,
    "id": "Light Blue|Beige",
    "sc": 0.714,
  },
  {
    "curated": false,
    "id": "Navy|Charcoal",
    "sc": 0.7082,
  },
  {
    "curated": false,
    "id": "Burgundy|Charcoal",
    "sc": 0.5782,
  },
]
`;

exports[`golden: male casual gap suggestions are stable 1`] = `
{
  "asBottoms": [
    {
      "c": "Olive",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Brown",
      "fl": true,
      "n": 6,
    },
    {
      "c": "White",
      "fl": false,
      "n": 7,
    },
    {
      "c": "Cream",
      "fl": false,
      "n": 7,
    },
    {
      "c": "Blue",
      "fl": true,
      "n": 4,
    },
  ],
  "asTops": [
    {
      "c": "Khaki",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Blue",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Rust",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Brown",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Forest Green",
      "fl": true,
      "n": 5,
    },
    {
      "c": "Beige",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Grey",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Purple",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Charcoal",
      "fl": false,
      "n": 5,
    },
    {
      "c": "Black",
      "fl": false,
      "n": 4,
    },
  ],
}
`;

exports[`golden: male casual ranked deck for Bold matches the snapshot 1`] = `
[
  "Mustard|Navy@1.55",
  "Burgundy|Beige@1.544",
  "Olive|Beige@1.504",
  "Navy|Grey@1.3782",
  "White|Navy@1.37",
  "Light Blue|Charcoal@1.3482",
  "Light Blue|Khaki@1.157",
  "Burgundy|Khaki@1.147",
  "Mustard|Black@1.1452",
  "Mustard|Charcoal@1.1082",
  "Navy|Khaki@1.017",
  "Navy|Beige@1.014",
  "Light Blue|Navy@0.99",
  "Navy|Navy@0.99",
  "Cream|Navy@0.97",
  "Olive|Navy@0.96",
  "Olive|Khaki@0.957",
  "Mustard|Khaki@0.957",
  "Light Blue|Black@0.9452",
  "White|Charcoal@0.9282",
  "Cream|Charcoal@0.9282",
  "White|Black@0.9252",
  "Cream|Black@0.9252",
  "Olive|Grey@0.9182",
  "Olive|Charcoal@0.9182",
  "Burgundy|Grey@0.9182",
  "Mustard|Grey@0.9182",
  "Olive|Black@0.9152",
  "Burgundy|Black@0.9152",
  "Mustard|Beige@0.914",
  "White|Grey@0.8882",
  "Cream|Grey@0.8882",
  "Burgundy|Navy@0.76",
  "White|Khaki@0.737",
  "Cream|Khaki@0.737",
  "Light Blue|Grey@0.7182",
  "Burgundy|Charcoal@0.7182",
  "Light Blue|Beige@0.714",
  "White|Beige@0.694",
  "Navy|Charcoal@0.5882",
  "Cream|Beige@0.574",
]
`;

exports[`golden: male casual ranked deck for Classic matches the snapshot 1`] = `
[
  "Navy|Grey@1.5982",
  "White|Navy@1.59",
  "Light Blue|Charcoal@1.3982",
  "Mustard|Navy@1.38",
  "Burgundy|Beige@1.324",
  "Olive|Beige@1.284",
  "Navy|Navy@1.26",
  "Navy|Beige@1.234",
  "Light Blue|Khaki@1.207",
  "Cream|Navy@1.19",
  "Navy|Khaki@1.187",
  "White|Charcoal@1.1482",
  "White|Grey@1.1082",
  "Cream|Charcoal@1.0982",
  "White|Black@1.0952",
  "Light Blue|Navy@1.09",
  "Cream|Grey@1.0582",
  "Cream|Black@1.0452",
  "White|Beige@0.964",
  "White|Khaki@0.957",
  "Light Blue|Black@0.9452",
  "Cream|Khaki@0.907",
  "Mustard|Charcoal@0.8882",
  "Burgundy|Khaki@0.877",
  "Mustard|Black@0.8752",
  "Navy|Charcoal@0.8582",
  "Olive|Navy@0.84",
  "Light Blue|Grey@0.8182",
  "Light Blue|Beige@0.814",
  "Cream|Beige@0.794",
  "Olive|Grey@0.7482",
  "Olive|Charcoal@0.7482",
  "Burgundy|Grey@0.7482",
  "Mustard|Grey@0.7482",
  "Mustard|Beige@0.744",
  "Olive|Khaki@0.737",
  "Mustard|Khaki@0.737",
  "Olive|Black@0.6952",
  "Burgundy|Black@0.6952",
  "Burgundy|Navy@0.64",
  "Burgundy|Charcoal@0.5482",
]
`;

exports[`golden: male casual ranked deck for Minimal matches the snapshot 1`] = `
[
  "Navy|Grey@1.5782",
  "White|Navy@1.57",
  "Light Blue|Charcoal@1.2982",
  "Navy|Navy@1.28",
  "Mustard|Navy@1.24",
  "Burgundy|Beige@1.234",
  "Navy|Khaki@1.217",
  "Navy|Beige@1.214",
  "Light Blue|Khaki@1.197",
  "Olive|Beige@1.194",
  "Cream|Navy@1.17",
  "White|Charcoal@1.1282",
  "Cream|Charcoal@1.1282",
  "White|Black@1.1252",
  "Cream|Black@1.1252",
  "White|Grey@1.0882",
  "Cream|Grey@1.0882",
  "White|Khaki@0.987",
  "Cream|Khaki@0.987",
  "White|Beige@0.984",
  "Light Blue|Navy@0.94",
  "Light Blue|Black@0.8952",
  "Navy|Charcoal@0.8782",
  "Cream|Beige@0.864",
  "Burgundy|Khaki@0.837",
  "Mustard|Black@0.8352",
  "Mustard|Charcoal@0.7982",
  "Light Blue|Beige@0.754",
  "Mustard|Khaki@0.737",
  "Light Blue|Grey@0.7182",
  "Olive|Navy@0.7",
  "Olive|Grey@0.6982",
  "Mustard|Grey@0.6982",
  "Olive|Khaki@0.697",
  "Burgundy|Black@0.6952",
  "Olive|Charcoal@0.6582",
  "Burgundy|Grey@0.6582",
  "Olive|Black@0.6552",
  "Mustard|Beige@0.654",
  "Burgundy|Navy@0.54",
  "Burgundy|Charcoal@0.4982",
]
`;

exports[`golden: male casual ranked deck for Statement matches the snapshot 1`] = `
[
  "Mustard|Navy@1.46",
  "Burgundy|Beige@1.454",
  "Olive|Beige@1.414",
  "Navy|Grey@1.3482",
  "White|Navy@1.34",
  "Light Blue|Charcoal@1.2982",
  "Light Blue|Khaki@1.157",
  "Burgundy|Khaki@1.057",
  "Mustard|Black@1.0552",
  "Mustard|Charcoal@1.0182",
  "Navy|Navy@1.01",
  "Navy|Khaki@0.987",
  "Navy|Beige@0.984",
  "Light Blue|Navy@0.94",
  "Cream|Navy@0.94",
  "Olive|Navy@0.92",
  "Olive|Khaki@0.917",
  "Mustard|Khaki@0.917",
  "White|Charcoal@0.8982",
  "Cream|Charcoal@0.8982",
  "White|Black@0.8952",
  "Cream|Black@0.8952",
  "Light Blue|Black@0.8952",
  "Olive|Grey@0.8782",
  "Olive|Charcoal@0.8782",
  "Burgundy|Grey@0.8782",
  "Mustard|Grey@0.8782",
  "Olive|Black@0.8752",
  "Burgundy|Black@0.8752",
  "Mustard|Beige@0.874",
  "White|Grey@0.8582",
  "Cream|Grey@0.8582",
  "White|Khaki@0.757",
  "Cream|Khaki@0.757",
  "Burgundy|Navy@0.72",
  "Light Blue|Grey@0.7182",
  "White|Beige@0.714",
  "Light Blue|Beige@0.714",
  "Burgundy|Charcoal@0.6782",
  "Navy|Charcoal@0.6082",
  "Cream|Beige@0.594",
]
`;

exports[`golden: male casual universe (ids + scores) matches the snapshot 1`] = `
[
  {
    "curated": true,
    "id": "Navy|Grey",
    "sc": 1.4482,
  },
  {
    "curated": true,
    "id": "White|Navy",
    "sc": 1.44,
  },
  {
    "curated": true,
    "id": "Mustard|Navy",
    "sc": 1.36,
  },
  {
    "curated": true,
    "id": "Burgundy|Beige",
    "sc": 1.354,
  },
  {
    "curated": true,
    "id": "Olive|Beige",
    "sc": 1.314,
  },
  {
    "curated": true,
    "id": "Light Blue|Charcoal",
    "sc": 1.2982,
  },
  {
    "curated": true,
    "id": "Light Blue|Khaki",
    "sc": 1.157,
  },
  {
    "curated": false,
    "id": "Navy|Navy",
    "sc": 1.11,
  },
  {
    "curated": false,
    "id": "Navy|Khaki",
    "sc": 1.087,
  },
  {
    "curated": false,
    "id": "Navy|Beige",
    "sc": 1.084,
  },
  {
    "curated": false,
    "id": "Cream|Navy",
    "sc": 1.04,
  },
  {
    "curated": false,
    "id": "White|Charcoal",
    "sc": 0.9982,
  },
  {
    "curated": false,
    "id": "Cream|Charcoal",
    "sc": 0.9982,
  },
  {
    "curated": false,
    "id": "White|Black",
    "sc": 0.9952,
  },
  {
    "curated": false,
    "id": "Cream|Black",
    "sc": 0.9952,
  },
  {
    "curated": false,
    "id": "White|Grey",
    "sc": 0.9582,
  },
  {
    "curated": false,
    "id": "Cream|Grey",
    "sc": 0.9582,
  },
  {
    "curated": false,
    "id": "Burgundy|Khaki",
    "sc": 0.957,
  },
  {
    "curated": false,
    "id": "Mustard|Black",
    "sc": 0.9552,
  },
  {
    "curated": false,
    "id": "Light Blue|Navy",
    "sc": 0.94,
  },
  {
    "curated": false,
    "id": "Mustard|Charcoal",
    "sc": 0.9182,
  },
  {
    "curated": false,
    "id": "Light Blue|Black",
    "sc": 0.8952,
  },
  {
    "curated": false,
    "id": "White|Khaki",
    "sc": 0.857,
  },
  {
    "curated": false,
    "id": "Cream|Khaki",
    "sc": 0.857,
  },
  {
    "curated": false,
    "id": "Olive|Navy",
    "sc": 0.82,
  },
  {
    "curated": false,
    "id": "Olive|Khaki",
    "sc": 0.817,
  },
  {
    "curated": false,
    "id": "Mustard|Khaki",
    "sc": 0.817,
  },
  {
    "curated": false,
    "id": "White|Beige",
    "sc": 0.814,
  },
  {
    "curated": false,
    "id": "Olive|Grey",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Olive|Charcoal",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Burgundy|Grey",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Mustard|Grey",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Olive|Black",
    "sc": 0.7752,
  },
  {
    "curated": false,
    "id": "Burgundy|Black",
    "sc": 0.7752,
  },
  {
    "curated": false,
    "id": "Mustard|Beige",
    "sc": 0.774,
  },
  {
    "curated": false,
    "id": "Light Blue|Grey",
    "sc": 0.7182,
  },
  {
    "curated": false,
    "id": "Light Blue|Beige",
    "sc": 0.714,
  },
  {
    "curated": false,
    "id": "Navy|Charcoal",
    "sc": 0.7082,
  },
  {
    "curated": false,
    "id": "Cream|Beige",
    "sc": 0.694,
  },
  {
    "curated": false,
    "id": "Burgundy|Navy",
    "sc": 0.62,
  },
  {
    "curated": false,
    "id": "Burgundy|Charcoal",
    "sc": 0.5782,
  },
]
`;

exports[`golden: male formal gap suggestions are stable 1`] = `
{
  "asBottoms": [
    {
      "c": "Olive",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Brown",
      "fl": true,
      "n": 6,
    },
    {
      "c": "White",
      "fl": false,
      "n": 7,
    },
    {
      "c": "Cream",
      "fl": false,
      "n": 7,
    },
    {
      "c": "Blue",
      "fl": true,
      "n": 4,
    },
  ],
  "asTops": [
    {
      "c": "Khaki",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Blue",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Rust",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Brown",
      "fl": true,
      "n": 6,
    },
    {
      "c": "Forest Green",
      "fl": true,
      "n": 5,
    },
    {
      "c": "Beige",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Grey",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Purple",
      "fl": false,
      "n": 6,
    },
    {
      "c": "Charcoal",
      "fl": false,
      "n": 5,
    },
    {
      "c": "Black",
      "fl": false,
      "n": 4,
    },
  ],
}
`;

exports[`golden: male formal ranked deck for Bold matches the snapshot 1`] = `
[
  "Light Blue|Navy@1.39",
  "White|Navy@1.37",
  "White|Charcoal@1.3282",
  "White|Black@1.3252",
  "Mustard|Navy@1.15",
  "Burgundy|Khaki@1.147",
  "Mustard|Black@1.1452",
  "Burgundy|Beige@1.144",
  "Light Blue|Grey@1.1182",
  "Mustard|Charcoal@1.1082",
  "Olive|Beige@1.104",
  "Navy|Khaki@1.017",
  "Navy|Beige@1.014",
  "Navy|Navy@0.99",
  "Navy|Grey@0.9782",
  "Cream|Beige@0.974",
  "Cream|Navy@0.97",
  "Olive|Navy@0.96",
  "Olive|Khaki@0.957",
  "Mustard|Khaki@0.957",
  "Light Blue|Charcoal@0.9482",
  "Light Blue|Black@0.9452",
  "Cream|Charcoal@0.9282",
  "Cream|Black@0.9252",
  "Olive|Grey@0.9182",
  "Olive|Charcoal@0.9182",
  "Burgundy|Grey@0.9182",
  "Mustard|Grey@0.9182",
  "Olive|Black@0.9152",
  "Burgundy|Black@0.9152",
  "Mustard|Beige@0.914",
  "White|Grey@0.8882",
  "Cream|Grey@0.8882",
  "Burgundy|Navy@0.76",
  "Light Blue|Khaki@0.757",
  "White|Khaki@0.737",
  "Cream|Khaki@0.737",
  "Burgundy|Charcoal@0.7182",
  "Light Blue|Beige@0.714",
  "White|Beige@0.694",
  "Navy|Charcoal@0.5882",
]
`;

exports[`golden: male formal ranked deck for Classic matches the snapshot 1`] = `
[
  "White|Navy@1.59",
  "White|Charcoal@1.5482",
  "White|Black@1.4952",
  "Light Blue|Navy@1.49",
  "Navy|Navy@1.26",
  "Navy|Beige@1.234",
  "Light Blue|Grey@1.2182",
  "Navy|Grey@1.1982",
  "Cream|Beige@1.194",
  "Cream|Navy@1.19",
  "Navy|Khaki@1.187",
  "White|Grey@1.1082",
  "Cream|Charcoal@1.0982",
  "Cream|Grey@1.0582",
  "Cream|Black@1.0452",
  "Light Blue|Charcoal@0.9982",
  "Mustard|Navy@0.98",
  "White|Beige@0.964",
  "White|Khaki@0.957",
  "Light Blue|Black@0.9452",
  "Burgundy|Beige@0.924",
  "Cream|Khaki@0.907",
  "Mustard|Charcoal@0.8882",
  "Olive|Beige@0.884",
  "Burgundy|Khaki@0.877",
  "Mustard|Black@0.8752",
  "Navy|Charcoal@0.8582",
  "Olive|Navy@0.84",
  "Light Blue|Beige@0.814",
  "Light Blue|Khaki@0.807",
  "Olive|Grey@0.7482",
  "Olive|Charcoal@0.7482",
  "Burgundy|Grey@0.7482",
  "Mustard|Grey@0.7482",
  "Mustard|Beige@0.744",
  "Olive|Khaki@0.737",
  "Mustard|Khaki@0.737",
  "Olive|Black@0.6952",
  "Burgundy|Black@0.6952",
  "Burgundy|Navy@0.64",
  "Burgundy|Charcoal@0.5482",
]
`;

exports[`golden: male formal ranked deck for Minimal matches the snapshot 1`] = `
[
  "White|Navy@1.57",
  "White|Charcoal@1.5282",
  "White|Black@1.5252",
  "Light Blue|Navy@1.34",
  "Navy|Navy@1.28",
  "Cream|Beige@1.264",
  "Navy|Khaki@1.217",
  "Navy|Beige@1.214",
  "Navy|Grey@1.1782",
  "Cream|Navy@1.17",
  "Cream|Charcoal@1.1282",
  "Cream|Black@1.1252",
  "Light Blue|Grey@1.1182",
  "White|Grey@1.0882",
  "Cream|Grey@1.0882",
  "White|Khaki@0.987",
  "Cream|Khaki@0.987",
  "White|Beige@0.984",
  "Light Blue|Charcoal@0.8982",
  "Light Blue|Black@0.8952",
  "Navy|Charcoal@0.8782",
  "Mustard|Navy@0.84",
  "Burgundy|Khaki@0.837",
  "Mustard|Black@0.8352",
  "Burgundy|Beige@0.834",
  "Mustard|Charcoal@0.7982",
  "Light Blue|Khaki@0.797",
  "Olive|Beige@0.794",
  "Light Blue|Beige@0.754",
  "Mustard|Khaki@0.737",
  "Olive|Navy@0.7",
  "Olive|Grey@0.6982",
  "Mustard|Grey@0.6982",
  "Olive|Khaki@0.697",
  "Burgundy|Black@0.6952",
  "Olive|Charcoal@0.6582",
  "Burgundy|Grey@0.6582",
  "Olive|Black@0.6552",
  "Mustard|Beige@0.654",
  "Burgundy|Navy@0.54",
  "Burgundy|Charcoal@0.4982",
]
`;

exports[`golden: male formal ranked deck for Statement matches the snapshot 1`] = `
[
  "Light Blue|Navy@1.34",
  "White|Navy@1.34",
  "White|Charcoal@1.2982",
  "White|Black@1.2952",
  "Light Blue|Grey@1.1182",
  "Mustard|Navy@1.06",
  "Burgundy|Khaki@1.057",
  "Mustard|Black@1.0552",
  "Burgundy|Beige@1.054",
  "Mustard|Charcoal@1.0182",
  "Olive|Beige@1.014",
  "Navy|Navy@1.01",
  "Cream|Beige@0.994",
  "Navy|Khaki@0.987",
  "Navy|Beige@0.984",
  "Navy|Grey@0.9482",
  "Cream|Navy@0.94",
  "Olive|Navy@0.92",
  "Olive|Khaki@0.917",
  "Mustard|Khaki@0.917",
  "Cream|Charcoal@0.8982",
  "Light Blue|Charcoal@0.8982",
  "Cream|Black@0.8952",
  "Light Blue|Black@0.8952",
  "Olive|Grey@0.8782",
  "Olive|Charcoal@0.8782",
  "Burgundy|Grey@0.8782",
  "Mustard|Grey@0.8782",
  "Olive|Black@0.8752",
  "Burgundy|Black@0.8752",
  "Mustard|Beige@0.874",
  "White|Grey@0.8582",
  "Cream|Grey@0.8582",
  "Light Blue|Khaki@0.757",
  "White|Khaki@0.757",
  "Cream|Khaki@0.757",
  "Burgundy|Navy@0.72",
  "White|Beige@0.714",
  "Light Blue|Beige@0.714",
  "Burgundy|Charcoal@0.6782",
  "Navy|Charcoal@0.6082",
]
`;

exports[`golden: male formal universe (ids + scores) matches the snapshot 1`] = `
[
  {
    "curated": true,
    "id": "White|Navy",
    "sc": 1.44,
  },
  {
    "curated": true,
    "id": "White|Charcoal",
    "sc": 1.3982,
  },
  {
    "curated": true,
    "id": "White|Black",
    "sc": 1.3952,
  },
  {
    "curated": true,
    "id": "Light Blue|Navy",
    "sc": 1.34,
  },
  {
    "curated": true,
    "id": "Light Blue|Grey",
    "sc": 1.1182,
  },
  {
    "curated": false,
    "id": "Navy|Navy",
    "sc": 1.11,
  },
  {
    "curated": true,
    "id": "Cream|Beige",
    "sc": 1.094,
  },
  {
    "curated": false,
    "id": "Navy|Khaki",
    "sc": 1.087,
  },
  {
    "curated": false,
    "id": "Navy|Beige",
    "sc": 1.084,
  },
  {
    "curated": false,
    "id": "Navy|Grey",
    "sc": 1.0482,
  },
  {
    "curated": false,
    "id": "Cream|Navy",
    "sc": 1.04,
  },
  {
    "curated": false,
    "id": "Cream|Charcoal",
    "sc": 0.9982,
  },
  {
    "curated": false,
    "id": "Cream|Black",
    "sc": 0.9952,
  },
  {
    "curated": false,
    "id": "Mustard|Navy",
    "sc": 0.96,
  },
  {
    "curated": false,
    "id": "White|Grey",
    "sc": 0.9582,
  },
  {
    "curated": false,
    "id": "Cream|Grey",
    "sc": 0.9582,
  },
  {
    "curated": false,
    "id": "Burgundy|Khaki",
    "sc": 0.957,
  },
  {
    "curated": false,
    "id": "Mustard|Black",
    "sc": 0.9552,
  },
  {
    "curated": false,
    "id": "Burgundy|Beige",
    "sc": 0.954,
  },
  {
    "curated": false,
    "id": "Mustard|Charcoal",
    "sc": 0.9182,
  },
  {
    "curated": false,
    "id": "Olive|Beige",
    "sc": 0.914,
  },
  {
    "curated": false,
    "id": "Light Blue|Charcoal",
    "sc": 0.8982,
  },
  {
    "curated": false,
    "id": "Light Blue|Black",
    "sc": 0.8952,
  },
  {
    "curated": false,
    "id": "White|Khaki",
    "sc": 0.857,
  },
  {
    "curated": false,
    "id": "Cream|Khaki",
    "sc": 0.857,
  },
  {
    "curated": false,
    "id": "Olive|Navy",
    "sc": 0.82,
  },
  {
    "curated": false,
    "id": "Olive|Khaki",
    "sc": 0.817,
  },
  {
    "curated": false,
    "id": "Mustard|Khaki",
    "sc": 0.817,
  },
  {
    "curated": false,
    "id": "White|Beige",
    "sc": 0.814,
  },
  {
    "curated": false,
    "id": "Olive|Grey",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Olive|Charcoal",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Burgundy|Grey",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Mustard|Grey",
    "sc": 0.7782,
  },
  {
    "curated": false,
    "id": "Olive|Black",
    "sc": 0.7752,
  },
  {
    "curated": false,
    "id": "Burgundy|Black",
    "sc": 0.7752,
  },
  {
    "curated": false,
    "id": "Mustard|Beige",
    "sc": 0.774,
  },
  {
    "curated": false,
    "id": "Light Blue|Khaki",
    "sc": 0.757,
  },
  {
    "curated": false,
    "id": "Light Blue|Beige",
    "sc": 0.714,
  },
  {
    "curated": false,
    "id": "Navy|Charcoal",
    "sc": 0.7082,
  },
  {
    "curated": false,
    "id": "Burgundy|Navy",
    "sc": 0.62,
  },
  {
    "curated": false,
    "id": "Burgundy|Charcoal",
    "sc": 0.5782,
  },
]
`;
